examples/passing/semantics/spawn.gm
x = 2;
y = 2;
$t = spawn { nop; };
assert(x == y);
