examples/failing/syntax/bad_condition.gm
if (spawn {nop;}) {
    x = 1;
}
